# ame-poptheb-idea2

./: .env.example  .gitignore  AGENTS.md  CORPORATE_RECON_REAL_KEYS.md  PROJECT_HANDOFF.md  README.md  SCANNER_SETUP.md  eslint.config.js  index.html  package-lock.json  package.json  render.yaml  requirements.txt  tailwind.config.js  vite.config.ts
backend/: .gitignore  OCCUPANCY_API.md  PHASES.md  README.md  address.py  api.py  apollo_people.py  building.py  enricher_bridge.py  models.py  people.py  pipeline_app.py  pyproject.toml  scan.py  store.py  vpn.py
backend/fixtures/: walkie_talkie.json
backend/routers/: buildings.py
backend/workers/: discover.py  ingest.py  occupant_people.py  occupants.py  osint_worker.py  simulate_worker.py
buildings/1-blackfriars-road-southwark-london-se1-9gj-united-kingdom/: meta.json  occupants.json  people.json  progress.json  result.json
buildings/174-queen-victoria-street-city-of-london-london-ec4v-4eg-united-kingdom/: meta.json  occupants.json  people.json  progress.json  result.json
docs/pricing/: german-shepherd-roi-justification.md
judging/: JUDGE_PROFILES.md
recon/: CAPTURE.md  DISCLOSURE_TEMPLATE.md  gbfs_audit.py
scripts/: build-evidence-deck.py  ingest-hazard.mjs  install-cameradar.sh  strip-checkerboard.py
server/: agent.mjs  aggregator.mjs  building.mjs  cache.mjs  cameradar_engine.py  cctvStream.mjs  corporate_recon.py  earlyAccess.mjs  index.mjs  memory.mjs  osint_engine.py  planning.mjs  scanner.py  scannerRelay.mjs  static.mjs
src/: App.tsx  index.css
src/lib/: agent.ts  (+4 more)
supabase/: demo_requests.sql
(+182 files in other folders)
